# Adtagger

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
adtagger/: adtagger.py
